# breach-ai

./: .env.example  .env.staging  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  LAUNCH_CHECKLIST.md  LICENSE  Procfile  RAILWAY_ENV_VARS.txt  README.md  SECURITY.md  alembic.ini  breach.py  deep_scan.py  docker-compose.yml  final_deep_scan.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  verify_findings.py
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: attack_module.yml  bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  security_vulnerability.md
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  worker.py
backend/api/: __init__.py  deps.py  server.py
backend/api/middleware/: abuse.py
backend/api/routes/: analytics.py  assessments.py  attestations.py  auth.py  billing.py  breaches.py  integrations.py  learning.py  recommendations.py  scans.py  schedules.py
backend/breach/: __init__.py  brutal_assessment.py  cli.py  engine.py
backend/breach/agents/: __init__.py  autonomous_agent.py  autonomous_brain.py  brain.py  script_generator.py
backend/breach/attacks/: __init__.py  ai_code_analyzer.py  api_annihilator.py  api_auth_breaker.py  api_discovery.py  auth.py  auth_obliterator.py  base.py  business_logic_destroyer.py  cache_poisoner.py  client_side_carnage.py  cloud_destroyer.py  cors_exploiter.py  docker_destroyer.py  engine.py  file_warfare.py  graphql_destroyer.py  idor.py  injection.py  injection_arsenal.py  jwt_obliterator.py  living_off_the_land.py  mfa_bypass.py  mobile_api_attacker.py  modern_stack_destroyer.py  nosql.py  oauth_destroyer.py  orchestrator.py  password_reset_killer.py  request_smuggler.py  rest_api_attacker.py  saml_destroyer.py  session_annihilator.py  sqli.py  ssrf.py  subdomain_takeover.py  websocket_destroyer.py  xss.py  xxe_destroyer.py
backend/breach/core/: __init__.py  agent.py  enhanced_brain.py  learning_engine.py  memory.py  orchestrator.py  sandbox.py  scheduler.py
backend/breach/deep_scan/: __init__.py  spider.py
backend/breach/engines/: chaos.py  deep.py  proven.py  quick.py
backend/breach/exploitation/: agents.py  evidence.py  poc_generator.py  validator.py
backend/breach/modules/: __init__.py  base.py
backend/breach/output/: __init__.py  json_formatter.py  markdown.py
backend/breach/recommendations/: __init__.py  api.py  cloud.py  injection.py
backend/breach/recon/: __init__.py  dns.py  engine.py  ports.py  recon_warfare.py  social_engineering.py  web.py
backend/breach/report/: __init__.py  brutal_report.py  generator.py
backend/breach/utils/: __init__.py  helpers.py  http.py
backend/db/: database.py  models.py
backend/monitoring/: __init__.py  alerts.py  metrics.py
backend/schemas/: auth.py  scans.py
backend/scripts/: import_scan_data.py
backend/services/: abuse_detection.py  attestation.py  audit.py  auth.py  billing.py  breach.py  email.py  executive_report.py  integrations.py  learning.py  scan.py  scheduler.py  storage.py  vector_store.py
configs/: example.yaml
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api.ts  utils.ts
sample-reports/: example-report.json
scripts/: breach_interactive.py  breach_ultimate.py  breach_v2.py  breach_v3.py  breach_v4.py  setup-local.sh
src/breach/: __init__.py  __main__.py  brutal_assessment.py  cli.py  config.py  logging_config.py
src/breach/agents/: autonomous_brain.py  brain.py  hacker_brain.py  saas_agent.py  script_generator.py  smart_agent.py
src/breach/ai/: __init__.py  agent.py  god_mode.py  prompt_manager.py  prompts.py  tools.py
src/breach/attacks/: __init__.py  ai_code_analyzer.py  api_annihilator.py  api_auth_breaker.py  api_discovery.py  auth.py  auth_obliterator.py  base.py  business_logic_destroyer.py  client_side_carnage.py  cloud_destroyer.py  docker_destroyer.py  engine.py  file_warfare.py  graphql_destroyer.py  host_header_injection.py  http_adapter.py  idor.py  injection.py  injection_arsenal.py  jwt_obliterator.py  mfa_bypass.py  mobile_api_attacker.py  modern_stack_destroyer.py  nosql.py  oauth_destroyer.py  orchestrator.py  password_reset_killer.py  prototype_pollution.py  rate_limit_bypass.py  registry.py  rest_api_attacker.py  saml_destroyer.py  session_annihilator.py  sqli.py  ssrf.py  ssti_exploiter.py  websocket_destroyer.py  xss.py
src/breach/core/: __init__.py  agent.py  enhanced_brain.py  killchain.py  learning_engine.py  memory.py  orchestrator.py  scheduler.py
src/breach/deep_scan/: engine.py  payloads.py
src/breach/engines/: __init__.py  base.py  chaos.py  deep.py  proven.py  quick.py
src/breach/exploitation/: __init__.py  agents.py  browser.py  shannon_engine.py  source_analyzer.py  strict_validator.py
src/breach/modules/: __init__.py  base.py
src/breach/output/: html.py
src/breach/phases/: __init__.py  phase1_recon.py  phase2_analysis.py  phase3_exploit.py  phase4_report.py
src/breach/recommendations/: __init__.py  authentication.py  infrastructure.py  web.py
src/breach/recon/: __init__.py  dns.py  engine.py  ports.py  recon_warfare.py  social_engineering.py  web.py
src/breach/report/: __init__.py  brutal_report.py  generator.py
src/breach/source/: __init__.py  dataflow.py  languages.py
src/breach/ui/: __init__.py  console.py  dashboard.py
tests/: __init__.py  conftest.py  test_attacks_base.py  test_cli.py  test_core.py
tests/attacks/: __init__.py  test_sqli.py
tests/e2e/: __init__.py  test_scan_flow.py
tests/integration/: __init__.py  test_learning.py  test_scans_api.py  test_scheduler.py
tests/load/: locustfile.py
tests/unit/: __init__.py  test_integrations.py  test_schemas.py
(+98 files in other folders)
