[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breach-ai"
version = "2.0.0"
description = "Autonomous security scanner with proof-by-exploitation"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Breach Team"}
]
keywords = ["security", "pentesting", "vulnerability-scanner", "autonomous", "exploitation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "dnspython>=2.5.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.18.0"]
browser = ["playwright>=1.41.0"]
full = ["breach-ai[ai,browser]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
breach = "breach.cli:app"

[project.urls]
Homepage = "https://github.com/KrishnaShettyDev/breach-ai"
Documentation = "https://github.com/KrishnaShettyDev/breach-ai#readme"
Repository = "https://github.com/KrishnaShettyDev/breach-ai"

[tool.setuptools.packages.find]
where = ["src"]
include = ["breach*"]

[tool.setuptools.package-data]
"breach.report" = ["templates/*.html", "templates/*.css"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
